--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -36,6 +36,16 @@
                     </a>
                 {% endfor %}
             </div>
+            <div class="navbar-nav ms-auto">
+                {% if current_user.is_authenticated %}
+                    <a class="nav-link" href="{{ url_for('auth_app.logout') }}">Logout</a>
+                {% else %}
+                    <a href="{{ url_for('auth_app.login') }}"
+                       class="nav-link {% if request.endpoint == 'auth_app.login' -%}active{%- endif %}">
+                        Login
+                    </a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </nav>
