--- a/blog/templates/users/details.html
+++ b/blog/templates/users/details.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 {% block title %}
-    User #{{ user_id }}
+    User #{{ user.id }}
 {% endblock %}
 {% block body %}
-    <h1>{{ user_name }}</h1>
+    <h1>
+        {{ user.username }}
+    </h1>
+    {% if user.is_staff %}
+        <span class="badge bg-secondary">staff</span>
+    {% endif %}
 
     <div>
         <a href="{{ url_for('users_app.list') }}">Back to users list</a>
