--- a/blog/templates/users/list.html
+++ b/blog/templates/users/list.html
@@ -6,12 +6,14 @@
     <h1>Users</h1>
     <div>
         <ul>
-            {% for user_id in users %}
+            {% for user in users %}
                 <li>
-                    <a href="{{ url_for('users_app.details', user_id=user_id) }}">
-                        {{ users[user_id] }}
-                    </a>
-                </li>
+                <a href="{{ url_for('users_app.details', user_id=user.id) }}">
+                    {{ user.username -}}
+                </a>
+                {% if user.is_staff %}
+                    <span class="badge bg-secondary">staff</span>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
