--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -40,10 +40,13 @@
                 {% if current_user.is_authenticated %}
                     <a class="nav-link" href="{{ url_for('auth_app.logout') }}">Logout</a>
                 {% else %}
-                    <a href="{{ url_for('auth_app.login') }}"
-                       class="nav-link {% if request.endpoint == 'auth_app.login' -%}active{%- endif %}">
-                        Login
-                    </a>
+                    {% for (endpoint, label) in [('auth_app.login', 'Login'), ('auth_app.register',
+                    'Register')] %}
+                        <a href="{{ url_for(endpoint) }}"
+                           class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">
+                            {{ label }}
+                        </a>
+                    {% endfor %}
                 {% endif %}
             </div>
         </div>
